--- a/termini.html
+++ b/termini.html
@@ -737,22 +737,24 @@ function createWaveform() {
 }
 
 function updateWaveform(targetProgress) {
-    // Interpola l'animazione verso il target
-    animationProgress += (targetProgress - animationProgress) * 0.1;
+    // Interpola l'animazione verso il target in modo più fluido
+    animationProgress += (targetProgress - animationProgress) * 0.05; // Cambiato il valore di interpolazione per una transizione più morbida
 
     const bars = document.querySelectorAll('.waveform-bar');
-    const barsToPlay = Math.floor(animationProgress * bars.length);
+    const barsToPlay = Math.floor(animationProgress * bars.length); // Numero di barre da colorare in base alla progressione
 
+    // Coloriamo le barre una alla volta in base al numero calcolato
     bars.forEach((bar, index) => {
         if (index < barsToPlay) {
             bar.classList.add('played'); // Aggiunge la classe per colorare la barra
         } else {
-            bar.classList.remove('played'); // Rimuove la colorazione per le barre successive
+            bar.classList.remove('played'); // Rimuove la classe per le barre successive
         }
     });
 
+    // Aggiorna la linea di progresso (se visibile nella UI)
     const progressLine = document.querySelector('.progress-line');
-    progressLine.style.left = `${animationProgress * 100}%`; // Aggiorna la linea di avanzamento
+    progressLine.style.width = `${animationProgress * 100}%`; // Imposta la larghezza della linea di progresso
 }
 
 
