--- a/termini.html
+++ b/termini.html
@@ -425,34 +425,33 @@ footer i {
     cursor: pointer;
 }
 
-.waveform-container {
-    display: none;
-    position: relative;
-    height: 60px;
-    background: #f5f5f5;
-    border-radius: 4px;
-    padding: 10px;
-    margin: 10px 0;
-    cursor: pointer;
-}
+ .waveform-container {
+            margin-top: 20px;
+            height: 100px;
+            background-color: #f3f4f6;
+            border-radius: 10px;
+            display: flex;
+            align-items: flex-end;
+            padding: 0 10px;
+            gap: 5px;
+            position: relative;
+        }
 
-.waveform-bars {
-    display: flex;
-    align-items: flex-end;
-    height: 40px;
-    gap: 1px;
-}
+  .waveform-bars {
+            display: flex;
+            gap: 5px;
+        }
 
-.waveform-bar {
-    flex: 1;
-    background: #ddd;
-    min-width: 2px;
-    transition: height 0.1s ease;
-}
+        .waveform-bar {
+            width: 10px;
+            background-color: #970a2c;
+            border-radius: 2px;
+            opacity: 0.8;
+        }
 
-.waveform-bar.played {
-    background: #970a2c;
-}
+        .waveform-bar.played {
+            background-color: #3d2a28;
+        }
 
 .time-display {
     display: flex;
@@ -462,14 +461,14 @@ footer i {
 }
 
 .progress-line {
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 2px;
-    background: rgba(151, 10, 44, 0.5);
-    pointer-events: none;
-}
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            width: 0;
+            height: 2px;
+            background-color: #3d2a28;
+            transition: width 0.1s ease;
+        }
       
    </style>
 </head>
