--- a/termini.html
+++ b/termini.html
@@ -467,6 +467,7 @@ footer i {
     width: 2px;
     background-color: #970a2c;
     transition: left 0.1s ease;
+    display: none; /* Nascondiamo la barra di progresso */
 }
       
    </style>
