--- a/termini.html
+++ b/termini.html
@@ -426,11 +426,11 @@ footer i {
 }
 
 .waveform-container {
-    /* Rimosso il bordo o contenitore rettangolare delle barre */
-    border: none;
+    display: none; /* Inizialmente nascosto */
     padding: 0;
-    background: none; /* Rimosso il background se c'è */
+    background: none; /* Se ci fosse un background da rimuovere */
 }
+
 
 .waveform-bars {
     display: flex;
