--- a/termini.html
+++ b/termini.html
@@ -426,40 +426,49 @@ footer i {
 }
 
 .waveform-container {
-    display: none; /* Inizialmente nascosto */
-    padding: 0;
-    background: none; /* Se ci fosse un background da rimuovere */
+    width: 100%;
+    height: 60px;
+    background: #f5f5f5;
+    border-radius: 8px;
+    padding: 10px;
+    position: relative;
+    margin-top: 10px;
 }
-
 
 .waveform-bars {
     display: flex;
-    align-items: flex-end;
-    height: 40px;
-    gap: 1px;
+    align-items: center;
+    gap: 2px;
+    height: 100%;
 }
 
 .waveform-bar {
     flex: 1;
     background: #ddd;
-    min-width: 2px;
-    transition: height 0.1s ease;
+    transition: background-color 0.3s;
 }
 
 .waveform-bar.played {
-    background: #970a2c;
-}
-
-.time-display {
-    display: flex;
-    justify-content: space-between;
-    font-size: 12px;
-    margin-top: 5px;
+    background: var(--primary);
 }
 
 .progress-line {
-    /* Rimosso tutto il codice relativo alla progress line */
-    display: none; /* Nascondi la progress line */
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 2px;
+    height: 100%;
+    background: var(--primary);
+    transition: left 0.1s;
+}
+
+.time-display {
+    position: absolute;
+    bottom: -25px;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    font-size: 14px;
 }
       
    </style>
@@ -524,21 +533,20 @@ footer i {
            
 <!-- Add this right after the library-name div in your HTML -->
 <div class="text-controls">
-<div class="audio-control-container">
-    <button class="audio-control" id="audioControl">
-        <i class="fas fa-headphones"></i>
-        <i class="fas fa-play"></i>
-    </button>
-    <span class="audio-label">ascolta l'audio</span>
-</div>
-  
-   
-<div class="waveform-container">
-    <div class="waveform-bars"></div>
-    <div class="progress-line"></div>
-    <div class="time-display">
-        <span id="currentTime">0:00</span>
-        <span id="totalTime">0:00</span>
+    <div class="audio-control-container">
+        <button class="audio-control" id="audioControl">
+            <i class="fas fa-headphones"></i>
+            <i class="fas fa-play"></i>
+        </button>
+        <span class="audio-label">ascolta l'audio</span>
+    </div>
+    <div class="waveform-container" style="display: none;">
+        <div class="waveform-bars"></div>
+        <div class="progress-line"></div>
+        <div class="time-display">
+            <span id="currentTime">0:00</span>
+            <span id="totalTime">0:00</span>
+        </div>
     </div>
 </div>
 
@@ -834,11 +842,17 @@ function handleWaveformClick(e) {
 
 function toggleWaveform() {
     const waveformContainer = document.querySelector('.waveform-container');
-    if (waveformContainer.style.display === 'none') {
-        waveformContainer.style.display = 'block';
-        createWaveform(); // Ricrea la waveform quando viene mostrata
+    if (waveformContainer) {
+        if (waveformContainer.style.display === 'none') {
+            waveformContainer.style.display = 'block';
+            createWaveform(); // Ricrea la waveform
+            console.log('Waveform displayed'); // Per debug
+        } else {
+            waveformContainer.style.display = 'none';
+            console.log('Waveform hidden'); // Per debug
+        }
     } else {
-        waveformContainer.style.display = 'none';
+        console.log('Waveform container not found'); // Per debug
     }
 }
 
