--- a/index.html
+++ b/index.html
@@ -876,33 +876,37 @@ function validateBookField(input) {
                 isValid = false;
             }
         } else {
-            // Nascondi l'errore quando il campo è vuoto o focalizzato
             hideError(input);
         }
     } else if (input.classList.contains('book-isbn')) {
-        if (value && !/^(?:\d{10}|\d{13})$/.test(value)) {
-            showError(input, 'ISBN deve essere di 10 o 13 cifre senza trattini');
-            isValid = false;
+        // Mostra errore solo se il campo è popolato e non è focalizzato
+        if (value && !input.matches(':focus')) {
+            if (!/^(?:\d{10}|\d{13})$/.test(value)) {
+                showError(input, 'ISBN deve essere di 10 o 13 cifre senza trattini');
+                isValid = false;
+            }
+        } else {
+            hideError(input);
         }
     }
 
-    if (isValid && !input.classList.contains('book-year')) {
+    if (isValid && !input.matches(':focus')) {
         hideError(input);
     }
 
     return isValid;
 }
 
-// Aggiungi gestione eventi per il campo anno
+// Aggiungi questi event listener dopo la funzione validateBookField:
 document.addEventListener('click', function(e) {
-    if (e.target.classList.contains('book-year')) {
-        // Quando il campo anno riceve il focus, nascondi l'errore
+    if (e.target.classList.contains('book-isbn')) {
+        // Quando il campo ISBN riceve il focus, nascondi l'errore
         hideError(e.target);
     }
 });
 
 document.addEventListener('blur', function(e) {
-    if (e.target.classList.contains('book-year')) {
+    if (e.target.classList.contains('book-isbn')) {
         // Valida il campo quando perde il focus
         validateBookField(e.target);
     }
@@ -1023,21 +1027,21 @@ function validateCheckbox(checkbox) {
             <input type="number" min="1400" max="2024" class="book-year w-full px-3 py-2 border-2 border-gray-300 rounded focus:border-blue-500 focus:outline-none text-base">
             <p class="hidden error-message text-sm text-red-500 mt-1">Anno non valido</p>
         </div>
-        <div class="mb-5">
-            <div class="flex items-center gap-1">
-                <label class="block text-slate-700 font-medium">ISBN (raccomandato):</label>
-                <div class="relative group -mt-1">
-                    <i class="fa-solid fa-circle-info text-gray-500 hover:text-gray-700 transition-colors text-sm"></i>
-                    <div class="invisible group-hover:visible absolute left-1/2 -translate-x-1/2 bottom-full mb-2 px-3 py-2 bg-white border border-gray-200 text-gray-700 text-sm rounded-lg w-64 shadow-lg z-10">
-                        <div class="absolute left-1/2 -translate-x-1/2 bottom-0 translate-y-full w-0 h-0 border-8 border-transparent border-t-white"></div>
-                        <div class="absolute left-1/2 -translate-x-1/2 bottom-0 translate-y-full w-0 h-0 border-[9px] border-transparent border-t-gray-200"></div>
-                        L'ISBN (International Standard Book Number) è un codice numerico di 10 o 13 cifre che identifica univocamente un libro. Lo trovi sul retro del libro sopra al codice a barre o nella pagina del copyright.
-                    </div>
+<div class="mb-5">
+        <div class="flex items-center gap-1">
+            <label class="block text-slate-700 font-medium">ISBN:</label>
+            <div class="relative group -mt-1">
+                <i class="fa-solid fa-circle-info text-gray-500 hover:text-gray-700 transition-colors text-sm"></i>
+                <div class="invisible group-hover:visible absolute left-1/2 -translate-x-1/2 bottom-full mb-2 px-3 py-2 bg-white border border-gray-200 text-gray-500 text-sm rounded-lg w-64 shadow-lg z-10">
+                    <div class="absolute left-1/2 -translate-x-1/2 bottom-0 translate-y-full w-0 h-0 border-8 border-transparent border-t-white"></div>
+                    <div class="absolute left-1/2 -translate-x-1/2 bottom-0 translate-y-full w-0 h-0 border-[9px] border-transparent border-t-gray-200"></div>
+                    ISBN deve essere di 10 o 13 cifre senza trattini
                 </div>
             </div>
-            <input type="tel" inputmode="numeric" class="book-isbn w-full px-3 py-2 border-2 border-gray-300 rounded focus:border-blue-500 focus:outline-none text-base" maxlength="13">
-            <p class="hidden error-message text-sm text-red-500 mt-1">ISBN non valido</p>
         </div>
+        <input type="tel" inputmode="numeric" class="book-isbn w-full px-3 py-2 border-2 border-gray-300 rounded focus:border-blue-500 focus:outline-none text-base" maxlength="13">
+        <p class="hidden error-message text-sm text-red-500 mt-1">ISBN non valido</p>
+    </div>
         
         <button type="button" class="add-book-btn" onclick="createBookEntry()">+ Aggiungi Libro</button>
     `;
