--- a/index.html
+++ b/index.html
@@ -876,74 +876,37 @@ function validateBookField(input) {
                 isValid = false;
             }
         } else {
+            // Nascondi l'errore quando il campo è vuoto o focalizzato
             hideError(input);
         }
     } else if (input.classList.contains('book-isbn')) {
-        // Mostra errore solo se il campo è popolato e non è focalizzato
-        if (value && !input.matches(':focus')) {
-            if (!/^(?:\d{10}|\d{13})$/.test(value)) {
-                showError(input, 'ISBN deve essere di 10 o 13 cifre senza trattini');
-                isValid = false;
-            }
-        } else {
-            hideError(input);
+        if (value && !/^(?:\d{10}|\d{13})$/.test(value)) {
+            showError(input, 'ISBN deve essere di 10 o 13 cifre');
+            isValid = false;
         }
     }
 
-    if (isValid && !input.matches(':focus')) {
+    if (isValid && !input.classList.contains('book-year')) {
         hideError(input);
     }
 
     return isValid;
 }
 
-// Aggiungi questi event listener dopo la funzione validateBookField:
+// Aggiungi gestione eventi per il campo anno
 document.addEventListener('click', function(e) {
-    if (e.target.classList.contains('book-isbn')) {
-        // Nascondi sia il testo di aiuto che l'errore quando il campo riceve il focus
-        const helpText = e.target.parentElement.querySelector('.isbn-help-text');
-        const errorMessage = e.target.parentElement.querySelector('.error-message');
-        helpText.classList.add('hidden');
-        errorMessage.classList.add('hidden');
+    if (e.target.classList.contains('book-year')) {
+        // Quando il campo anno riceve il focus, nascondi l'errore
         hideError(e.target);
     }
 });
 
 document.addEventListener('blur', function(e) {
-    if (e.target.classList.contains('book-isbn')) {
-        const value = e.target.value.trim();
-        const helpText = e.target.parentElement.querySelector('.isbn-help-text');
-        
-        // Mostra il testo di aiuto solo se c'è un valore
-        if (value) {
-            if (!/^(?:\d{10}|\d{13})$/.test(value)) {
-                // Se il valore non è valido, mostra l'errore
-                validateBookField(e.target);
-                helpText.classList.add('hidden');
-            } else {
-                // Se il valore è valido, mostra il testo di aiuto
-                hideError(e.target);
-                helpText.classList.remove('hidden');
-            }
-        } else {
-            // Se il campo è vuoto, nascondi sia l'aiuto che l'errore
-            helpText.classList.add('hidden');
-            hideError(e.target);
-        }
+    if (e.target.classList.contains('book-year')) {
+        // Valida il campo quando perde il focus
+        validateBookField(e.target);
     }
 });
-
-
-// Aggiungi anche un listener per input per gestire i cambiamenti durante la digitazione
-document.addEventListener('input', function(e) {
-    if (e.target.classList.contains('book-isbn') && e.target.matches(':focus')) {
-        // Nascondi sia il testo di aiuto che l'errore durante la digitazione quando il campo è focalizzato
-        const helpText = e.target.parentElement.querySelector('.isbn-help-text');
-        const errorMessage = e.target.parentElement.querySelector('.error-message');
-        helpText.classList.add('hidden');
-        errorMessage.classList.add('hidden');
-    }
-});	
 
 	// Add this style to remove spinner arrows
 const style = document.createElement('style');
@@ -1060,28 +1023,22 @@ function validateCheckbox(checkbox) {
             <input type="number" min="1400" max="2024" class="book-year w-full px-3 py-2 border-2 border-gray-300 rounded focus:border-blue-500 focus:outline-none text-base">
             <p class="hidden error-message text-sm text-red-500 mt-1">Anno non valido</p>
         </div>
-
-
- 
-<div class="mb-5">
-    <div class="flex items-center gap-1">
-        <label class="block text-slate-700 font-medium">ISBN:</label>
-        <div class="relative group -mt-1">
-            <i class="fa-solid fa-circle-info text-gray-500 hover:text-gray-700 transition-colors text-sm"></i>
-            <div class="invisible group-hover:visible absolute left-1/2 -translate-x-1/2 bottom-full mb-2 px-3 py-2 bg-white border border-gray-200 text-gray-500 text-sm rounded-lg w-64 shadow-lg z-10">
-                L'ISBN (International Standard Book Number) è un codice numerico di 10 o 13 cifre che identifica univocamente un libro. Lo trovi sul retro del libro sopra al codice a barre o nella pagina del copyright.
+        <div class="mb-5">
+            <div class="flex items-center gap-1">
+                <label class="block text-slate-700 font-medium">ISBN (raccomandato):</label>
+                <div class="relative group -mt-1">
+                    <i class="fa-solid fa-circle-info text-gray-500 hover:text-gray-700 transition-colors text-sm"></i>
+                    <div class="invisible group-hover:visible absolute left-1/2 -translate-x-1/2 bottom-full mb-2 px-3 py-2 bg-white border border-gray-200 text-gray-700 text-sm rounded-lg w-64 shadow-lg z-10">
+                        <div class="absolute left-1/2 -translate-x-1/2 bottom-0 translate-y-full w-0 h-0 border-8 border-transparent border-t-white"></div>
+                        <div class="absolute left-1/2 -translate-x-1/2 bottom-0 translate-y-full w-0 h-0 border-[9px] border-transparent border-t-gray-200"></div>
+                        L'ISBN (International Standard Book Number) è un codice numerico di 10 o 13 cifre che identifica univocamente un libro. Lo trovi sul retro del libro sopra al codice a barre o nella pagina del copyright.
+                    </div>
+                </div>
             </div>
+            <input type="tel" inputmode="numeric" class="book-isbn w-full px-3 py-2 border-2 border-gray-300 rounded focus:border-blue-500 focus:outline-none text-base" maxlength="13">
+            <p class="hidden error-message text-sm text-red-500 mt-1">ISBN non valido</p>
         </div>
-    </div>
-    <input type="tel" inputmode="numeric" class="book-isbn w-full px-3 py-2 border-2 border-gray-300 rounded focus:border-blue-500 focus:outline-none text-base" maxlength="13">
-    <p class="hidden isbn-help-text text-sm text-gray-500 mt-1">ISBN deve essere di 10 o 13 cifre senza trattini</p>
-    <p class="hidden error-message text-sm text-red-500 mt-1">ISBN non valido</p>
-</div>
-
-
-
-
- 
+        
         <button type="button" class="add-book-btn" onclick="createBookEntry()">+ Aggiungi Libro</button>
     `;
 
