--- a/index.html
+++ b/index.html
@@ -1086,7 +1086,7 @@ function validateCheckbox(checkbox) {
         </div>
         <div class="mb-5">
             <div class="flex items-center gap-1">
-                <label class="block text-slate-700 font-medium">ISBN (raccomandato):</label>
+                <label class="block text-slate-700 font-medium">ISBN <span class="text-gray-500 font-normal">(raccomandato)</span>:</label>
                 <div class="relative group -mt-1">
                     <i class="fa-solid fa-circle-info text-gray-500 hover:text-gray-700 transition-colors text-sm"></i>
                     <div class="invisible group-hover:visible absolute left-1/2 -translate-x-1/2 bottom-full mb-2 px-3 py-2 bg-white border border-gray-200 text-gray-700 text-sm rounded-lg w-64 shadow-lg z-10">
