--- a/termini.html
+++ b/termini.html
@@ -447,7 +447,7 @@ footer i {
     display: none;
 }
 
-/* Aggiorna il colore del testo "Ascolta l'audio" per mantenerlo coordinato */
+/* Aggiorna il colore del testo "ascolta l'audio" per mantenerlo coordinato */
 .audio-label {
     color: var(--primary);
     cursor: pointer;
@@ -567,7 +567,7 @@ footer i {
         <i class="fas fa-headphones"></i>
         <i class="fas fa-play"></i>
     </button>
-    <span class="audio-label">ascolta l'audio</span>
+    <span class="audio-label">Ascolta l'audio</span>
 </div>
   
    
