--- a/termini.html
+++ b/termini.html
@@ -192,10 +192,15 @@
     align-items: center;
     visibility: visible;
     opacity: 1;
+    text-decoration: none;
+    border-bottom: none;
+       
 }
 
        .nav-icons a:hover {
            transform: scale(1.1);
+          text-decoration: none;
+          border-bottom: none;
        }
 
        .nav-icons a:first-child {
