--- a/termini.html
+++ b/termini.html
@@ -504,25 +504,58 @@ footer i {
     background: rgba(151, 10, 44, 0.5);
     pointer-events: none;
 }
+
+
+     /* Add new tooltip styles */
+        .tooltip-container {
+            position: relative;
+            display: inline-block;
+        }
+
+        .tooltip-container::after {
+            content: "Questo link si apre in una nuova finestra";
+            position: absolute;
+            bottom: 100%;
+            left: 50%;
+            transform: translateX(-50%);
+            background-color: rgba(0, 0, 0, 0.8);
+            color: white;
+            padding: 5px 10px;
+            border-radius: 4px;
+            font-size: 14px;
+            white-space: nowrap;
+            visibility: hidden;
+            opacity: 0;
+            transition: opacity 0.3s ease;
+            pointer-events: none;
+            z-index: 1000;
+        }
+
+        .tooltip-container:hover::after {
+            visibility: visible;
+            opacity: 1;
+        }
+
+
       
    </style>
 </head>
 <body>
    <div class="top-banner">
-        <a href="https://culture.roma.it/">
-        <img src="roma.png" alt="Logo Roma" class="roma-logo">
-         </a>
+        <a href="https://culture.roma.it/" class="tooltip-container">
+            <img src="roma.png" alt="Logo Roma" class="roma-logo">
+        </a>
         <div class="social-icons">
-            <a href="https://www.facebook.com/biblioteca.elsamorante?locale=it_IT" target="_blank" aria-label="Facebook">
+            <a href="https://www.facebook.com/biblioteca.elsamorante?locale=it_IT" target="_blank" aria-label="Facebook" class="tooltip-container">
                 <i class="fab fa-facebook"></i>
             </a>
-            <a href="https://www.instagram.com/bibliotecaelsamorante/" target="_blank" aria-label="Instagram">
+            <a href="https://www.instagram.com/bibliotecaelsamorante/" target="_blank" aria-label="Instagram" class="tooltip-container">
                 <i class="fab fa-instagram"></i>
             </a>
-            <a href="https://x.com/bibliomorante" target="_blank" aria-label="X">
+            <a href="https://x.com/bibliomorante" target="_blank" aria-label="X" class="tooltip-container">
                 <i class="fab fa-x-twitter"></i>
             </a>
-            <a href="https://www.youtube.com/@bibliotecaelsamorante1172/featured" target="_blank" aria-label="YouTube">
+            <a href="https://www.youtube.com/@bibliotecaelsamorante1172/featured" target="_blank" aria-label="YouTube" class="tooltip-container">
                 <i class="fab fa-youtube"></i>
             </a>
         </div>
