--- a/termini.html
+++ b/termini.html
@@ -506,22 +506,23 @@ footer i {
 }
 
 
-  /* Add new tooltip styles */
-        .tooltip-container {
+      
+
+   .tooltip-container {
             position: relative;
             display: inline-block;
         }
 
-        /* Tooltip styling */
         .tooltip-container::after {
             content: "Questo link si apre in una nuova finestra";
             position: absolute;
-            bottom: 120%; /* Aumentato per dare più spazio */
+            top: 100%;  /* Changed from bottom: 100% to top: 100% */
             left: 50%;
             transform: translateX(-50%);
-            background-color: white;
-            color: gray;
-            padding: 5px 10px;
+            margin-top: 8px;  /* Added margin for better spacing */
+            background-color: white;  /* Changed to white background */
+            color: #666;  /* Changed to grey text */
+            padding: 8px 12px;
             border-radius: 4px;
             font-size: 14px;
             white-space: nowrap;
@@ -530,20 +531,26 @@ footer i {
             transition: opacity 0.3s ease;
             pointer-events: none;
             z-index: 1000;
-            width: max-content;
-            box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1); /* Aggiunto un'ombra per visibilità */
+            box-shadow: 0 2px 5px rgba(0,0,0,0.2);  /* Added shadow for better visibility */
+            border: 1px solid #ddd;  /* Added border for better definition */
         }
 
-        /* Show tooltip on hover */
         .tooltip-container:hover::after {
             visibility: visible;
             opacity: 1;
         }
 
-        /* Additional style to make sure tooltip doesn't overflow */
-        .social-icons a {
-            display: inline-block;
-            margin-right: 10px;
+        /* Ensure tooltips for social icons don't get cut off */
+        .social-icons .tooltip-container {
+            position: relative;
+        }
+
+        .social-icons .tooltip-container::after {
+            width: max-content;
+            left: 50%;
+            transform: translateX(-50%);
+            white-space: normal;
+            text-align: center;
         }
 
 
