--- a/termini.html
+++ b/termini.html
@@ -521,10 +521,10 @@ footer i {
     position: absolute;
     background-color: white;
     color: #666;
-    padding: 3px 12px; /* Aumentata l'altezza della tooltip */
-    line-height: 1.5; /* Aumentata l'altezza della linea */
+    padding: 4px 12px; /* Ridotto il padding per abbassare l'altezza */
+    line-height: 1.3; /* Leggermente ridotto lo spazio tra le righe */
     border-radius: 4px;
-    font-size: 14px; /* Aumentato il font */
+    font-size: 13px; /* Font leggermente più piccolo */
     font-style: italic;
     white-space: nowrap;
     visibility: hidden;
@@ -546,7 +546,7 @@ footer i {
     top: 100%;
     left: 0; /* Allineato al bordo sinistro del logo */
     transform: translateX(0); /* Rimosso lo spostamento */
-    margin-top: 12px; /* Aumentata la distanza della tooltip */
+    margin-top: 18px; /* Aumentata la distanza della tooltip, più in basso */
     z-index: 9999;
 }
 
@@ -580,6 +580,7 @@ footer i {
     position: absolute !important;
     background-color: white !important;
 }
+
 
 
       
