--- a/termini.html
+++ b/termini.html
@@ -546,7 +546,7 @@ footer i {
     top: 100%;
     left: 0; /* Allineato al bordo sinistro del logo */
     transform: translateX(0); /* Rimosso lo spostamento */
-    margin-top: 18px; /* Aumentata la distanza della tooltip, più in basso */
+    margin-top: 30px; /* Aumentato significativamente la distanza della tooltip */
     z-index: 9999;
 }
 
@@ -580,6 +580,7 @@ footer i {
     position: absolute !important;
     background-color: white !important;
 }
+
 
 
 
