--- a/termini.html
+++ b/termini.html
@@ -546,7 +546,7 @@ footer i {
     top: 100%;
     left: 0; /* Allineato al bordo sinistro del logo */
     transform: translateX(0); /* Rimosso lo spostamento */
-    margin-top: 30px; /* Aumentato significativamente la distanza della tooltip */
+    margin-top: 8px; /* Distanza simile alle social icons */
     z-index: 9999;
 }
 
@@ -563,7 +563,7 @@ footer i {
     top: 100%;
     left: 0;
     transform: translateX(-75%); /* Spostato più a sinistra */
-    margin-top: 8px;
+    margin-top: 8px; /* Stessa distanza come per roma */
     z-index: 100000;
     background-color: white !important;
 }
@@ -580,6 +580,7 @@ footer i {
     position: absolute !important;
     background-color: white !important;
 }
+
 
 
 
