--- a/termini.html
+++ b/termini.html
@@ -541,12 +541,15 @@ footer i {
     opacity: 1;
 }
 
- /* Specific adjustment for Roma logo tooltip */
-        a[href="https://culture.roma.it/"]::after {
-            left: 0;  /* Reset left position */
-            transform: translateX(20%);  /* Sposta la tooltip verso destra */
+
+
+/* Specific adjustment for Roma logo tooltip */
+        .roma-logo-container::after {
+            left: 30%;  /* Spostato la tooltip verso destra */
         }
 
+
+      
 /* Social icons container */
 .social-icons {
     position: relative;
