--- a/termini.html
+++ b/termini.html
@@ -545,7 +545,7 @@ footer i {
 /* Social icons tooltips */
 .social-icons .tooltip-container::after {
     bottom: -40px;
-    left: 50%;
+    left: 30%;  /* Spostato più a sinistra */
     transform: translateX(-50%);
     top: auto;
     background-color: white !important;
@@ -555,12 +555,12 @@ footer i {
 .top-banner > a.tooltip-container::after {
     bottom: -40px !important;
     top: auto !important;
-    left: 75% !important;  /* Spostato più a destra */
+    left: 85% !important;  /* Spostato più a destra */
     transform: translateX(-50%) !important;
     position: absolute !important;
     background-color: white !important;
-    height: 24px !important;  /* Stessa altezza delle tooltip social */
-    line-height: 1 !important;  /* Aggiustato line-height */
+    height: 24px !important;
+    line-height: 1 !important;
     display: flex !important;
     align-items: center !important;
 }
