--- a/termini.html
+++ b/termini.html
@@ -545,7 +545,7 @@ footer i {
 /* Social icons tooltips */
 .social-icons .tooltip-container::after {
     bottom: -40px;
-    left: 5%;  /* Spostato più a sinistra */
+    left: -100% !important;  /* Spostato molto più a sinistra */
     transform: translateX(-50%);
     top: auto;
     background-color: white !important;
@@ -555,7 +555,7 @@ footer i {
 .top-banner > a.tooltip-container::after {
     bottom: -40px !important;
     top: auto !important;
-    left: 85% !important;  /* Spostato più a destra */
+    left: 85% !important;
     transform: translateX(-50%) !important;
     position: absolute !important;
     background-color: white !important;
@@ -570,7 +570,6 @@ footer i {
     position: relative;
     z-index: 1;
 }
-
 
 
 
