--- a/termini.html
+++ b/termini.html
@@ -545,11 +545,12 @@ footer i {
 /* Social icons tooltips */
 .social-icons .tooltip-container::after {
     bottom: -40px;
-    left: -200% !important;  /* Spostato molto più a sinistra */
-    transform: translateX(-50%);
+    left: 50%;
+    transform: translateX(-150%) !important;  /* Spostato ulteriormente a sinistra */
     top: auto;
     background-color: white !important;
 }
+
 
 /* Specific targeting for Roma logo tooltip */
 .top-banner > a.tooltip-container::after {
