--- a/termini.html
+++ b/termini.html
@@ -545,8 +545,8 @@ footer i {
 /* Social icons tooltips */
 .social-icons .tooltip-container::after {
     bottom: -40px;
-    left: 50%;
-    transform: translateX(-150%) !important;  /* Spostato ulteriormente a sinistra */
+    left: -150% !important;  /* Spostato molto più a sinistra */
+    transform: translateX(-50%);
     top: auto;
     background-color: white !important;
 }
